# Umka-CSharp

./: .gitignore  Directory.Build.props  README.md  THIRD-PARTY-NOTICES.md  UmkaSharp.sln  goal.txt
.github/workflows/: ci.yml
benchmarks/UmkaSharp.Benchmarks/: FunctionCallBenchmarks.cs  Program.cs  RuntimeBenchmarks.cs  UmkaSharp.Benchmarks.csproj  expected-benchmarks.txt  smoke-benchmarks.txt
docs/: api-concepts.md  callbacks.md  errors.md  examples.md  getting-started.md  limitations.md  marshalling.md  native-build.md  platforms.md  publishing.md  required-docs.txt  threading-lifetime.md  troubleshooting.md
native/: CMakeLists.txt  build_windows_msvc.ps1  umka_shim.c
samples/: project-reference-samples.txt
samples/Calculator/: Program.cs  expected-output.txt
samples/HostCallbacks/: Program.cs  expected-output.txt
samples/Modules/: Modules.csproj  Program.cs  expected-output.txt
samples/PackageConsumer/: PackageConsumer.csproj  Program.cs  expected-output.txt
samples/Smoke/: Program.cs
samples/StructuredData/: Program.cs  StructuredData.csproj  expected-output.txt
scripts/: pack-local.ps1  verify-benchmarks.ps1  verify-ci-publishing-policy.ps1  verify-docs.ps1  verify-linux-docker.ps1  verify-package-layout.ps1  verify-package-local.ps1  verify-platform-support.ps1  verify-samples.ps1  verify-third-party-notices.ps1
src/UmkaSharp/: NativeMethods.cs  NativeUtf8StringArray.cs  UmkaAnyValue.cs  UmkaCallFrame.cs  UmkaCallback.cs  UmkaEnumConversion.cs  UmkaEnumMemberInfo.cs  UmkaError.cs  UmkaException.cs  UmkaFunction.cs  UmkaHostHandle.cs  UmkaMapCopy.cs  UmkaMapNativeWriter.cs  UmkaMapValueCompatibility.cs  UmkaNativeValue.cs  UmkaRuntime.cs  UmkaRuntimeOptions.cs  UmkaRuntimeState.cs  UmkaSharp.csproj  UmkaSingleConversion.cs  UmkaStringValidation.cs  UmkaTypeInfo.cs  UmkaValue.cs
tests/UmkaSharp.Tests/: AnyValueTests.cs  CallableTests.cs  CallbackTests.cs  HostHandleTests.cs  MarshallingTests.cs  ModuleTests.cs  NativeValueTests.cs  (+10 more)
